# TALE-the-rpg

./: Cargo.toml
assets/: table.png-autosave.kra
src/: assets.rs  enemy.rs  game.rs  gui.rs  intro.rs  main.rs  map.rs  options.rs  player.rs  title.rs
src/assets/: README.md
src/rooms/: grid_room.rs  mod.rs
